# cpp-library-create

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
sources/: compute.cpp  compute.hpp
